# computer-graphics

./: CMakeLists.txt  main.cpp  main.cpp.bak  stroke.cpp  stroke.h  util.cpp  util.h
karya/: bunga.cpp  karya.cpp  karya.h
shape/: belahKetupat.cpp  jajarGenjang.cpp  lingkaran.cpp  persegi.cpp  segitiga.cpp  shape.cpp  shape.h  trapesium.cpp
transformation/: rotasi.cpp  transformation.h
